# SAES

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.web  buildapi.bat  buildweb.bat  bun.lockb  fetch.bat  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.github/ISSUE_TEMPLATE/: hiba-jelentés.md
.github/workflows/: api.yml  build-api.yml  build-app.yml  build-cdn.yml  build-converter.yml  build-gbot.yml  build-img.yml  build-static.yml  build-web.yml  docker.yml  main.yml  web.yml
api/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  package.json  readme.md  tsconfig.json
api/prisma/: schema.prisma
api/src/: auth.rs  envs.rs  image.rs  image.ts  init.rs  leintes.ts  list.rs  list.ts  logging.rs  main.rs  main.ts  potlek.ts  shorts.rs  szamla.ts
api/src/config/: loader.rs  mod.rs  structs.rs
api/src/cucc/: api.rs  headers.rs  middle.rs  mod.rs  sql.rs
api/src/db/: api_keys.rs  bills.rs  data.rs  hailes.rs  hails.rs  items.rs  leintesek.rs  logs.rs  mod.rs  prelude.rs  service_bills.rs  shorts.rs  statuses.rs  supplement_types.rs  supplements.rs  types.rs  users.rs
api/src/lib/: apis.ts  db.ts  discord.ts  google.ts
api/src/socket/: mod.rs  stores.rs
api/src/ucp/: base.rs  calls.rs  items.rs  mod.rs
api/src/ucp/admin/: base.rs  home.rs  items.rs  mod.rs
api/src/ucp/faction/: base.rs  logs.rs  mod.rs
api/src/ucp/fm/: base.rs  logs.rs  mod.rs
api/src/ucp/mv/: base.rs  home.rs  items.rs  mod.rs
api/src/ucp/shift/: base.rs  mod.rs
api/src/ucp/sm/: base.rs  home.rs  items.rs  mod.rs
api/src/ucp/sys/: config_api.rs  mod.rs
api/src/user/: admin.ts  base.rs  calls.rs  calls.ts  doksi.ts  home.rs  items.rs  main.ts  mod.rs
api/src/user/admin/: base.rs  items.rs  mod.rs
api/src/utils/: api.rs  db_bindgen.rs  factions.rs  functions.rs  middle.rs  mod.rs  permissions.rs  queries.rs  sql.rs  structs.rs  types.rs  types_statuses.rs
app/: README.md  bun.lockb  package.json  tailwind.config.js
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/util/: config.rs
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/loader/: +page.svelte
app/src/routes/main/: +page.svelte
app/src/routes/overlay/: +page.svelte
cdn/: Cargo.toml  Dockerfile
cdn/src/: image.rs  main.rs
central/: package.json
central/src-tauri/: Cargo.toml  tauri.conf.json
central/src-tauri/src/: main.rs
converter/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
converter/src/: envs.rs  init.rs  main.rs
converter/src/db/: images.rs
converter/src/utils/: ffmpeg.rs  mod.rs
gbot/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
gbot/src/: auth.rs  envs.rs  main.rs
gui/: package.json  tailwind.config.js
gui/src/: app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs  rpc.rs
gui/src/routes/: +page.svelte
img/: Cargo.toml  Dockerfile
img/src/: image.rs  main.rs
overlay/: package.json  tailwind.config.js
overlay/src/: app.html  main.css
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: icon.icns
overlay/src-tauri/src/: lib.rs  main.rs  rpc.rs  tray.rs
overlay/src/routes/: +page.svelte
prisma/: schema.prisma
scripts/: api.bat  buildweb.bat  fetch.bat  gbot.bat  web.bat
shared/: Cargo.toml
shared/src/: lib.rs  sql.rs
shared/src/db/: bills.rs  hails.rs  images.rs  images_bind.rs  logs.rs  mod.rs  prelude.rs  shorts.rs  supplements.rs
src/: app.css
src/api/src/cucc/: middle.rs  sql.rs
src/lib/server/: discord.ts  google.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/admin/: +page.server.ts  +page.svelte
src/routes/api/potlekok/: +server.ts
src/routes/api/upload/: +server.ts
src/routes/auth/: +page.server.ts
src/routes/cb/: +page.server.ts
src/routes/info/: +page.svelte
src/routes/noaccess/: +page.svelte
src/routes/user/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/user/admin/: +page.server.ts
src/routes/user/potlekok/: +page.server.ts  +page.svelte
src/web/: package.json  pnpm-lock.yaml  tailwind.config.js
src/web/src/lib/: api.ts  upload.svelte
static/: .env.example  .gitignore  Cargo.toml  Dockerfile  manifest.json
static/src/: envs.rs  image.rs  main.rs  sql.rs
web/: .env.example  Dockerfile  README.md  compose.yaml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  web.code-workspace
web-new/: Cargo.toml
web/src/: app.css  app.d.ts  app.html  snow.css
web/src/lib/: adminlist.svelte  api.ts  error.svelte  list.svelte  loading.svelte.ts  navigation.svelte  permissions.ts  public.ts  snow.svelte  socket.ts  time.ts  title.svelte  types.ts  upload.svelte
web/src/lib/admin/: adminlist.svelte  grid.svelte  itemlist.svelte
web/src/lib/fm/: loglist.svelte
web/src/lib/mv/: adminlist.svelte  mvlist.svelte
web/src/lib/server/: discord.ts  google.ts
web/src/lib/sm/: smlist.svelte
web/src/lib/ucp/: header.svelte  list.svelte  public.ts  types.ts  upload.svelte
web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
web/static/: macska.avif  manifest.json
web/static/sckk/: worker.js
webn/: Cargo.toml  index.html  tailwind.config.js
webn/src/: main.rs
webn/src/routes/: base.rs
webn/static/: manifest.json  style_main.css
(+143 files in other folders)
