[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.116"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"
dotenvy = "0.15.7"
reqwest = "0.12.4"
url-builder = "0.1.1"
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.38"
