[package]
name = "saes-api"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
sea-orm = { version = "1.1.3", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
serde_json = "1.0.135"
axum = { version = "0.8.1", features = ["http2", "macros", "multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-cookies = "0.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
url-builder = "0.1.1"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
chrono = "0.4.39"
http = "1.2.0"
socketioxide = "0.15.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
struct_iterable = "0.1.1"
base64 = "0.22.1"
saes-shared = { path = "../shared" }
