[package]
name = "saes-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.38"
