[package]
name = "saes-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.39"
saes-shared = { path = "../shared" }
