[package]
name = "saes-img"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http2", "macros"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
