[package]
name = "saes-shared"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
