[package]
name = "saes-static"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["http2", "macros"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.3", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
saes-shared = { path = "../shared" }
